unify messages format

--- a/source/posts/2012-02-28.md
+++ b/source/posts/2012-02-28.md
@@ -1,9 +1,6 @@
----
-Title: день открытых дверей в бутырском изоляторе
-Date: 2012-02-28
-Slug: 2012-02-28
----
-### Программерское
+# День открытых дверей в бутырском изоляторе
+
+## Программерское
 
 * [Выступления Страуструпа на тему "Как писать хороший код на C++11"](http://channel9.msdn.com/Events/GoingNative/GoingNative-2012/Keynote-Bjarne-Stroustrup-Cpp11-Style/player) - он странный докладчик, но безусловно это полтора часа очень познавательного видео.
 * Подкрепляю [программной речью Торвальдса](http://harmful.cat-v.org/software/c++/linus) из рассылки git 2007 года
@@ -12,21 +9,21 @@ Slug: 2012-02-28
 * [Хакиум: награда за эксплоиты](http://blog.chromium.org/2012/02/pwnium-rewards-for-exploits.html) - вкратце, google выделил $1м на поощрение тем, кто сдает им эксплоиты хрома. В общем молодцы, завидую.
 * Как байесовая вероятностная модель [может сделать в 12 раз более аккуратное предсказание пожизненной стоимости клиента](http://blog.custora.com/2012/02/how-bayesian-probability-models-can-make-clv-predictions-12x-more-accurate/) - офигенно увлекательная статья о том, что и в маркетинге есть математика. Рекомендуется всем программистам, которые думают что маркетинг это несложно.
 
-### Десктоп и мобильное
+## Десктоп и мобильное
 
 * [Опера анонсирует Opera 12, Opera Mini 7 и Opera Mini Next](http://my.opera.com/ODIN/blog/2012/02/25/opera-mobile-12-and-introducing-opera-mini-next) по мне так весьма интересный анонс. Еще больше HTML5/CSS3 и еще больше пафоса. Впрочем Opera 12 и правда самый быстрый по эту сторону Гудзона.
 * [Мозилла запартнерилась, чтобы выпускать свою телефонную платформу](http://blog.mozilla.com/blog/2012/02/27/mozilla-in-mobile-the-web-is-the-platform/)
   > Today, we announced several significant milestones in the advancement toward these goals. The first, was Telefónica’s support for the creation of open Web devices based on our ”Boot to Gecko” project. Also supporting the project are industry leaders, Adobe and Qualcomm. Together, we are committed to driving forward the adoption of HTML5 as a viable platform option for the mobile industry.
-  
+
   смотри далее уже на самом [сайте новой платформы](http://www.openwebdevice.com/).
 
 * [Офигенный дизайн, бета-версия Skype for Windows Phone](http://www.theverge.com/2012/2/27/2827455/skype-for-windows-phone-beta) прямо облизать хочется, простите за формулировку. Для тех, кто хочет посмотреть в живую [ссылка на маркет](http://www.windowsphone.com/en-US/apps/c3f8e570-68b3-4d6a-bdbb-c0a3f4360a51)
 * [Гугл сам не понимает что делать с купленной Мотороллой](http://www.theverge.com/2012/2/27/2827692/google-building-firewall-between-android-and-motorola-after)
-  > Google's Andy Rubin led the charge to acquire Motorola, but the Android boss won't have anything to do with the company once the deal closes — he told reporters at Mobile World Congress today that he "sponsored" the acquisition but now has "nothing to do with it.... I don't even know who's running it." 
+  > Google's Andy Rubin led the charge to acquire Motorola, but the Android boss won't have anything to do with the company once the deal closes — he told reporters at Mobile World Congress today that he "sponsored" the acquisition but now has "nothing to do with it.... I don't even know who's running it."
 
 * В продолжение предыдущей заметки - еще один пост Марко, на этот раз критический: ["Будьте уверены, мы победим"](http://www.marco.org/2012/02/27/make-sure-we-are-winning) о том как разработчик Instapaper и вообще хороший парень видит положение на рынке мобильных ОС.
 
-#### Интернет-проекты
+## Интернет-проекты
 
 * [Обновились карты Nokia](http://maps.nokia.com/) немножко другие цвета, немножко другой интерфейс, немножко в стиле wp7. Или меня глючит?
 * [MapBox Street: всемирные карты с детализацией до улицы](http://mapbox.com/blog/announcing-mapbox-streets/) - конечно же на основе openstreetmap.
@@ -38,9 +35,9 @@ Slug: 2012-02-28
 * [Кто-то должен сделать Project Gutenberg с поддержкой git](http://neosmart.net/blog/2012/the-case-for-a-git-powered-project-gutenberg/) - очередной показательно-разработчик предлагает сделать систему работы с книгами, но с поддержкой версионирования и blame'ом. В общем по классике всё. "Чудовищно далеки они от народа."
 * [Мой способ бороться с прокрастинацией](http://lesswrong.com/lw/9wr/my_algorithm_for_beating_procrastination/)
   > After three months of practice, I now use a single algorithm to beat procrastination most of the times I face it.1 It probably won't work for you quite like it did for me, but it's the best advice on motivation I've got, and it's a major reason I'm known for having the "gets shit done" property. There are reasons to hope that we can eventually break the chain of akrasia; maybe this post is one baby step in the right direction.
-    
+
   в общем хороший текст, пробегитесь, автор даже формулы нарисовал :)
-  
+
 * Две штучки про стартапы: [Классическая хоррор-стори от стартапера](http://venturebeat.com/2012/02/27/a-classic-startup-horror-story-the-ma-bait-and-switch/) и [Как убить стартап прислушиваясь к пользователям](http://steveblank.com/2012/02/27/killing-your-startup-by-listening-to-customers/)
 * И классика [Идея не самоценна и является только мультипликатором к реализации](http://www.oreillynet.com/onlamp/blog/2005/08/ideas_are_just_a_multiplier_of.html) - статья 2005го года, актуальна как никогда.
 
