--- a/source/posts/2012-02-29.md
+++ b/source/posts/2012-02-29.md
@@ -1,10 +1,6 @@
----
-Title: Одним махом семерых побивахом
-Date: 2012-02-29
-Slug: 2012-02-29
----
+# Одним махом семерых побивахом
 
-### Технологии
+## Технологии
 * [Апач2.4 местами быстрее nginx](http://blog.zhuzhaoyuan.com/2012/02/apache-24-faster-than-nginx/), что по моему совсем не удивительно. Статья из демонстрации превосходства и последующим разоблачением.
 * Кстати, [оказывается китайцы из Taobao выложили в опенсорс свой форк Nginx](http://tengine.taobao.org/). Причем еще год назад. Красота, да?
 * [vitess:scaling MySQL databases for the web](http://code.google.com/p/vitess/), в реальной жизни некоторый аналог mysqlproxy. Работает.
@@ -15,7 +11,7 @@ Slug: 2012-02-29
 * [О телевидении будущего, точнее уже настоящего](http://spectrum.ieee.org/consumer-electronics/audiovideo/all-in-the-game/0) про то, как делаются цифровые эффекты в трансляциях спортивных событий.
 
 
-### Интернет
+## Интернет
 * [На NYTimes хороший пост о никарагуанской 1ой гугломапсовой войне](http://opinionator.blogs.nytimes.com/2012/02/28/the-first-google-maps-war/) это когда люди долго не могли разобраться, где на самом деле проходит граница между Никарагуа и Коста-Рико.
 * У гиковской поисковой системы [DuckDuckGo!](http://duckduckgo.com), которой я пользуюсь, сегодня первый день рождения. Ну да, они запустились 4 года назад, 29 февраля. Набор хороших ссылок про то, [как у них все начиналось](http://www.gabrielweinberg.com/blog/2012/02/happy-first-birthday-duckduckgo.html)
 * [Пикозу, графический редактор на html5](http://www.picozu.com/editor) мне показался очень милым и не тормозящим. Вот бы его в наши Фотки, да?
@@ -34,7 +30,7 @@ Slug: 2012-02-29
 * [Хороший пост](http://blog.gramfeed.com/post/18460554119/2-hour-side-project-to-2-million-visitors) от автора GramFeed, про извечное "релиз ёрли, релиз офтен".
 * [Дурацкая статья 27 способов делать больше дел](http://www.greatist.com/happiness/27-ways-to-get-more-shit-done-022812/). Просыпайтесь раньше, спите больше, делайте одно дело единовременно, блаблабла. Может вам поможет, мне уже нет.
 
-### Разное
+## Разное
 * [Расшифровка генома "ледяного человека"](http://ec2-50-17-65-93.compute-1.amazonaws.com/index.html), того, который [Ötzi the Iceman](http://en.wikipedia.org/wiki/%C3%96tzi_the_Iceman). Познавательно, но не про интернет :)
 * Для тех, кто интересуется, [ревью интерфейса Gnome3.4](http://afaikblog.wordpress.com/2012/02/28/looking-forward-to-gnome-3-4/)
 * Интуитивный интерфейс у Скайп. Понятен [даже орангутангам](http://www.extremetech.com/extreme/111143-orangutans-to-skype-between-zoos-with-ipads) которые скайпятся друг с другом.
