--- a/source/posts/2012-03-01.md
+++ b/source/posts/2012-03-01.md
@@ -1,8 +1,4 @@
----
-Title: новое слово - "ашолб"!
-Date: 2012-03-01
-Slug: 2012-03-01
----
+# Новое слово - "ашолб"!
 
 * [Почему апгрейд ядра Linux сделает ваших пользователей счастливее](http://samsaffron.com/archive/2012/03/01/why-upgrading-your-linux-kernel-will-make-your-customers-much-happier)
 * [Сенсация месяца: клауд Windows Azure вчера упал на 9 часов](http://blogs.msdn.com/b/windowsazure/archive/2012/03/01/windows-azure-service-disruption-update.aspx), по крайней мере часа 3 точно провалялись. Самое смешное это причина ошибки - 29 февраля. Ну да, не подумали они о високосных годах.
