--- a/source/posts/2012-03-05.md
+++ b/source/posts/2012-03-05.md
@@ -1,33 +1,29 @@
----
-Title: на выходных мы работаем без выходных
-Date: 2012-03-05
-Slug: 2012-03-05
----
+# Hа выходных мы работаем без выходных
 
-### Безопасность
+## Безопасность
 * [☭](http://habrahabr.ru/blogs/infosecurity/139399/) [Егор Хомяков прикололся и закоммитил в гитхаб RoR](https://github.com/rails/rails/commit/b83965785db1eec019edf1fc272b1aa393e6dc57) - в общем он нашел дырку в рельсах, и вместо того чтобы зарепортить ее, закоммитил что-то в репозиторий рельсов. [Немножко самовосхваления в блоге автора](http://homakov.blogspot.com/2012/03/egor-stop-hacking-gh.html), и еще оказывается [GitHub его немножко засуспендил](http://homakov.blogspot.com/2012/03/im-disappoint-github.html). А вот [изначальный репорт Егора](https://github.com/rails/rails/issues/5228). Всего трехдневной давности. Зря он конечно поспешил, надо было подождать хотя бы неделю. [Еще](http://chrisacky.posterous.com/github-you-have-let-us-all-down). [И, наконец, разьяснения автора "чо это было ваще"](http://homakov.blogspot.com/2012/03/how-to.html#). В общем интересная тема.
 * [Почему никто не использует клиентские SSL сертификаты](http://pilif.github.com/2008/05/why-is-nobody-using-ssl-client-certificates/)
 * [☭](http://habrahabr.ru/blogs/infosecurity/139225/) [Хакеры имели полный доступ к компьютерам NASA](http://www.bbc.co.uk/news/technology-17231695) и при этом никак не вмешались в работу всяких спутников. Удивительно и противоречит всем нормам Голливуда!
 
-### Интернетное
+## Интернетное
 * [На странице логаута появилась форма для поиска Bing](http://techcrunch.com/2012/03/02/facebook-logout-bing-search/)
 * [В Дании полицейский цензор случайно перекрыл всей стране доступ к Гуглу и Фейсбуку](http://torrentfreak.com/google-facebook-and-8000-other-sites-accidentally-dns-blocked-120302/). Кстати сказать что сайт  [нашего подкаста](http://radio-t.com/) закрыт для доступа в некоторых странах. Страшное дело :)
 * [rww очень разумно пишет о коалиции Йелп, Твиттер и Эппл против Гугла](http://www.readwriteweb.com/archives/yelp_twitter_apples_anti-google_coalition.php#.T1HZmKqy6dM.hackernews) - и да, 25 миллиардов загрузок из АппСтора!
 * [Пост свитчера с гугла на дакдакго](http://shitmaxsays.com/post/18645781815/duckduckgo-review). Я тоже почти всегда вместо гугла сначала ищу в уткеутке. Удобный он очень, хоть и качество поиска не фонтан.
 * [Фейсбук точно знает, прочитали вы его письмо или нет](https://plus.google.com/100163791375010553991/posts/ghcXadTegWX) - используется тег bgsound, хитрый трюк в общем :)
 
-### Технология
+## Технология
 * [LThread - многоядерные/многотредные корутины](https://github.com/halayli/lthread) с довольно pthread-like синтаксисом и сокетами.
 * [Как работает Cleo, умный саджест от LinkedIn](https://engineering.linkedin.com/open-source/cleo-open-source-technology-behind-linkedins-typeahead-search) - очень интересно, в том числе и с технической точки зрения.
 * [How Eventual is Eventual Consistency?](http://basho.com/blog/technical/2012/03/02/Eventual-Consistency-and-PBS/) - ну не смог перевести для вас название. Насколько евенчуальна евенчуальная консистентность? :)
 * [Новость "два в одном"](https://groups.google.com/forum/?fromgroups#!topic/nessdb/ueNELAWw_Vg) - обновилась довольно интересная ключ-значение база [nessDB](https://github.com/shuttler/nessDB). Очень быстрая. Правда ни черта не умеет, но очень быстрая. А вторая новость - обновились гуглогруппы, теперь они в стиле gmail.
 * [Basket.js - загрузчик javascript'ов, сохраняющий их в localStorage](http://addyosmani.github.com/basket.js/) - реализация показалась мне ужасной. Но идея-то правильная. Померять бы профит...
 
-### Психология
+## Психология
 * [Почему мы всегда думаем что наш продукт плох](http://andrewchenblog.com/2012/03/02/why-your-product-will-never-seem-like-its-good-enough/)
 * [Не спрашивайте кастомеров, сколько он будут платить. Говорите им сколько они заплатят](http://blog.spark59.com/2012/dont-ask-customers-what-theyll-pay-tell-them/)
 
-### Прочее
+## Прочее
 * [Как черепаховые кошки демонстрируют ограниченность клонирования](http://io9.com/5890039/how-tortoiseshell-cats-show-the-limits-of-cloning) - я фанат черепаховой окраски. Так и знайте.
 * [Из плода, закопанного белкой 30 тыс. лет назад, вырастили цветок](http://blogs.discovermagazine.com/notrocketscience/2012/02/20/flowers-regenerated-from-30000-year-old-frozen-fruits-buried-by-ancient-squirrels/) - примечательно что это опять "русские ученые".
 
