--- a/source/posts/2012-03-07.md
+++ b/source/posts/2012-03-07.md
@@ -1,37 +1,32 @@
----
-Title: доколе будет продолжаться этот бардак со средой?
-Date: 2012-03-07
-Slug: 2012-03-07
----
+# Доколе будет продолжаться этот бардак со средой?
 
-## Тема выпуска
 [Гугл плей](https://play.google.com/about/features/) - это ж надо было так, просто скопировали СВОЙ ЖЕ Маркет, приклеить к нему Гугл Мьюзик и сделалть вид, что это отдельный новый продукт.
 
 * [[☭] ](http://habrahabr.ru/blogs/google/139538/) [Официальный анонс](http://android-developers.blogspot.com/2012/03/introducing-google-play.html)
 * [[☭] ](http://habrahabr.ru/blogs/android_development/139505/) [Одновременно максимальный размер приложения подняли до 4гб](http://www.techieapps.com/google-raised-android-market-app-size-limit-from-50mb-to-a-whooping-4gb/)
 * [ТекКранч: прощай, Андроид Маркет, привет, Гугл Плей!](http://techcrunch.com/2012/03/06/goodbye-android-market-hello-google-play/)
 
-### Мобильное
+## Мобильное
 * [Sencha Touch 2](http://www.sencha.com/blog/announcing-sencha-touch-2) запустился. Это один из лучших  (на мой взгляд) мобильных вебфреймворков, по сути ExtJS для мобильных. [Хороший обзор на RWW](http://www.readwriteweb.com/mobile/2012/03/sencha-touch-2-allows-develope.php)
 * [Почему Objective-C такой сложный](http://ashfurrow.com/2012/03/why-objective-c-is-hard/) и короткий ответ - по дизайну :)
 
-### Технология
+## Технология
 
 * [☭ Волшебство Git](http://www-cs-students.stanford.edu/~blynn/gitmagic/intl/ru/) отличный РУССКОЯЗЫЧНЫЙ учебник по git. Для всех, включая совсем новичков.
 * Зарелизился [Vagrant 1.0](http://vagrantup.com/). Это система для управления виртуалбоксом. Страшно удобно для разработки. По крайней мере я пользуюсь уже год.
 * [[☭] ](http://habrahabr.ru/blogs/crazydev/119676/) Про программы, которые печатают сами себя все уже знают, не удивить. Но блин, [самовоспроизводящийся .zip и .gz архив](http://research.swtch.com/zip) - это просто нету слов!
 * Бывает надо, [список всех стран, на всех языках, во всех форматах](http://dev.umpirsky.com/list-of-all-countries-in-all-languages-and-all-data-formats/)
 
-### Интернеты
+## Интернеты
 * [Набор иконок для Bootstrap](http://fortaweso.me/font-awesome/), в виде шрифта, как теперь модно.
 * [[☭] ](http://habrahabr.ru/blogs/pm/139541/) Закончился редизайн [БейзКампа](http://basecamp.com/). Расскажите, как вам впечатления?
 * [Хороший обзор CoffeeScript](http://www.gridlinked.info/oop-with-coffeescript-javascript/), прямо хочется на нем писать. Хорошо что я трезво оцениваю свои силы, на фронтенде в частности :)
 
-### Психология
+## Психология
 * [Критицизм и дорога с двусторонним движением](http://blog.intercom.io/criticism-and-two-way-streets/) - статья, которая дает еще один ответ на вопрос "Почему Яндекс не стал дизайнерской компанией?". И отличная цитата из статьи: *Lastly, always remember the golden rule of critique: don’t be a dick.*
 * Я бы перевел так: [Ну узнаете вы роадмэп вашего конкурента, и чо?](http://blog.asmartbear.com/secret-business-plan.html)
 
-### Прочее
+## Прочее
 * Тред на Reddit/askscience [Если вселенная расширяется, то что находится за границе вселенной?](http://www.reddit.com/r/askscience/comments/qk58k/what_is_space_expanding_into/).
 * Младшие дети в классе [обычно более поддержаны ADHD](http://www.torontosun.com/2012/03/06/kids-born-later-in-the-year-more-likely-to-be-diagnosed-with-adhd-study), чем их более взрослые одноклассники. Очень спорно.
 * [Офигенный способ, как в уме делить на 9, 90, 900 и тд](http://mathema-tricks.blogspot.com/2012/01/dividing-by-9-90-900-and-so-on-into.html)
