--- a/source/posts/2012-03-11.md
+++ b/source/posts/2012-03-11.md
@@ -1,10 +1,5 @@
----
-Title: s1e11. сегодня же воскресенье?
-Date: 2012-03-11
-Slug: 2012-03-11
----
+# s1e11. сегодня же воскресенье?
 
-## Тема выпуска
 На конференции [CanSecWest](http://cansecwest.com/) закончился конкурс Pwn2Own, [[☭] при поддержке Google](http://habrahabr.ru/blogs/infosecurity/139034/), обещавшей раздать $1m за дырки в безопасности хрома.
 
 * [[☭] Размочил счет тюменский парень Сергей Глазунов](http://habrahabr.ru/blogs/browsers/139677/) [[☭] заработавший сходу 60k](http://www.opennet.ru/opennews/art.shtml?num=33301). [А потом всё это зашлифовал PikiePie](http://arstechnica.com/business/news/2012/03/googles-chrome-browser-on-friday.ars), отхватив точно такой же куш.
@@ -12,25 +7,25 @@ Slug: 2012-03-11
 * [И, кстати, крайне любопытно](http://www.zdnet.com/blog/security/how-google-set-a-trap-for-pwn2own-exploit-team/10641), как гугловцы заготовили специальную ловушечку для тех, кто атаковал флеш в хроме.
 
 
-### Интернет
+## Интернет
 * [Очень мечтаю чтобы что-то такое появилось в яндексе](http://swapped.cc/#!/password-hinting) - офигенный способ показывать правильно ли ты набрал свой пароль. Надо играть с цветом и формой, но сама идея для меня прямо идеал. [Вот еще вариант](http://skattyadz.github.com/JavaScript-RGB-Password/index.html), на этот раз цветом.
 * [Обзор средств для создания презентаций](http://betakit.com/2012/03/10/rethinking-powerpoint-the-new-wave-of-presentation-tools) - я знал только про Prezi.
 * [Драма, вокруг Apple и их использования OpenStreetMaps](http://blog.osmfoundation.org/2012/03/08/welcome-apple/), а так же [[☭] реакция русских ОСМеров на это](http://habrahabr.ru/blogs/openstreetmap/139641/). Кстати, по последней ссылке также традиционный лютый баттхёрт по поводу народных Я.Карт.
 * Как вы наверное знаете, в мире 8% мужиков имеет проблемы с определением цвета. [Отличный сайт](http://wearecolorblind.com/) помогающий разработчикам научиться думать об этой проблеме.
 * [Говорят, Твиттер продал архивы твитов рекламщикам](http://www.dailymail.co.uk/sciencetech/article-2107693/Twitter-sells-years-everyones-old-vanished-Tweets-online-marketing-companies.html). Вы верите?
 
-### Браузеры и мобильные
+## Браузеры и мобильные
 * Помните про приложение iTether, которое выкинули из AppStore за нелегальный тезеринг? [Они научились это делать просто через веб-приложение :)](http://www.macrumors.com/2012/03/09/tether-launches-html5-based-iphone-tethering-solution/). Красивое решение, прокси через браузер с вебсокетами.
 * [MikaMobile продолжает плакать про размер .apk для Google Play](http://mikamobile.blogspot.com/2012/03/our-future-with-android.html) - чего-то я уже утомился от этих плачей.
 * [Экстеншн для Хрома, показывающий используешь ли ты SPDY](http://www.devthought.com/2012/03/10/chrome-spdy-indicator/) визуально весьма и весьма.
 * [[☭] Firefox 11 уже скоро](http://habrahabr.ru/blogs/firefox/139699/), хотя я бы посоветовал дождаться нормального релиза и скачать его на [fx.yandex.ru](http://fx.yandex.ru) (не реклама, не гербалайф).
 
-### Технологии
+## Технологии
 * [РейлзТуториалз переписаны с использованием TwitterBootstrap](http://news.railstutorial.org/ruby-on-rails-tutorial-now-with-twitters-boot) и, надо сказать, так они выглядят сильно приятнее.
 * [Почему VIM использует эти странные hjkl](http://www.catonmat.net/blog/why-vim-uses-hjkl-as-arrow-keys/) вместо стрелок. Вкратце - потому что на [терминале ADM-3A](http://en.wikipedia.org/wiki/ADM-3A) на этом месте был курсор. А не из-за юзабилити, как некоторые думают.
 * Я как-то уже рассказывал почему упал Azure. [Вот тут отличный постмортем](http://blogs.msdn.com/b/windowsazure/archive/2012/03/09/summary-of-windows-azure-service-disruption-on-feb-29th-2012.aspx) - честный, хоть и немножко наивный.
 * [Убойная речь Линуса о binary compatibility](https://lkml.org/lkml/2012/3/8/495). Как у нас тут принято говорить "ржака-ржака"! :)
 
 
-### Разное
+## Разное
 * [Британские ученые выяснили, человеческий мозг 6-битный](http://www.sciencedaily.com/releases/2012/03/120309103701.htm), но мне почему-то кажется что это булшит.
