--- a/source/posts/2012-03-22.md
+++ b/source/posts/2012-03-22.md
@@ -1,28 +1,22 @@
----
-Title: 22 марта. Война самсунгов с контактом
-Date: 2012-03-22
-Slug: 2012-03-22
----
-
-## Тема дня
+# 22 марта. Война самсунгов с контактом
 
 Вчера днем, без объявления войны [добрые ребята Вконтакта написали злобный пасквиль на добрых ребят из Самсунг-Россия](http://j.mp/GLxUvT). Я, на самом деле, скорее согласен с пасквилем, хотя понимаю почему самсунговцы выбрали свой путь.
 Сам сам сунг, кстати, [ответил на претензии прессрелизом](http://j.mp/GLxUvZ) и предложил сходить в суд. Интересно тут еще вот что: это 3 раз за последний год, когда Дуров и компания шлют большие компании на три буквы. Вконтакт, как символ молодых и дерзких, конечно поддержат своего кумира. Но сколько может продолжаться такая методика публичных конфликтов? И правильно ли это, конфликтовать так открыто, ведь пользователи страдают. Не знаю. Повторюсь, мне нравится ВК, но и Самсунг понять можно, их бизнес устроен совсем не так, как хотелось бы Вконтакту.
 
 
-### Браузер и мобильные
+## Браузер и мобильные
 
 * [Эй, Эппл, время для АппСтора2.0!](http://j.mp/GF3fWc) пишут ребята из покетнекст. Статья с недостатками аппстора, и попытками указать на их решения. Не сказать чтобы я согласен, но мнение интересное.
 * [Китай стал лидером по активации iOS и Android гаджетов в сутки](http://j.mp/GF3fWd). Ну еще бы, 2млрд потребителей.
 
-### Проектное
+## Проектное
 * [Про fluent.io ](http://j.mp/GF3fWe), очередной "новый взгляд на инбокс", от уволившихся гуглеров.
 * [Бизнес за уикенд](http://j.mp/GF3ikL) - отличная идея. Ты посылаешь смс "яндекс" на номер и со временем получаешь адреса всех, кто написал это же слово. Полезно для конференций и прочей такой ерунды. Статья интересна не поэтому, а с точки зрения того, как правильно организована работа проектной команды.
 * [Новая рапидшара](http://j.mp/GF3ikM) на этот раз с десктопным клиентом, без ограничения места, p2p, не требует регистрации. Идея просто отличная в общем. Радость любителей чайлдпорна по всему миру!
 * [Очень интересная новая визуализация карты от Stamen](http://j.mp/GF3iB9): данные от OSM, акварельная карта + детализации. Выглядит красиво, хотя пользоваться конечно так нельзя.
 
-### Технологии
-* [Сендбокшеный python](http://j.mp/GF3iBg) - неплохая идея для скриптинга. Набор патчей и модулей, запрещающий питону обращаться к файлам и сокетам, а так же загружать системные модули. 
+## Технологии
+* [Сендбокшеный python](http://j.mp/GF3iBg) - неплохая идея для скриптинга. Набор патчей и модулей, запрещающий питону обращаться к файлам и сокетам, а так же загружать системные модули.
 * [Матсумото пообещал что в новых релизах Ruby не будет autoload](http://j.mp/GF3iBh). Даже не знаю, неужели кто-то использовал autoload в продакшне?
 * [Провокативная статья "Рельсы это просто API"](http://j.mp/GF3gcz) - я тоже очень за, чтобы все серверные фреймворки были всего лишь источниками API для толстых HTML5 клиентов.
 * [ТоррентФрики таки запустили летающих дронов для раздачи торрентов](http://j.mp/GF3iBm). Кажется они настроены очень серьезно. Я до этого момента надеялся что шутят.
@@ -31,7 +25,7 @@ Slug: 2012-03-22
 * [Новый и удобный jQuery File Upload](http://j.mp/GF3gcE) с мультиселектом и прогрессбаром. [[☭ ] Перевод и подробный обзор](http://j.mp/GF3iRF)
 * [О состоянии современных генераторов случайных чисел](http://j.mp/GF3gcJ) - примерно пол статьи плача о том как всё плохо. А дальше очень разумно. Давайте я совру что понял всё-всё, а вы поверите, ладно? :)
 
-### Разное
+## Разное
 * [Первая в мире электрическая улитка](http://j.mp/GF3iRQ)
 * [История чувака, который живет с магнитным имплантом в мизинце](http://j.mp/GF3j8a). Когда я читаю такие статьи, мне кажется, что я уже в будущем.
 
