--- a/source/posts/2012-03-23.md
+++ b/source/posts/2012-03-23.md
@@ -1,39 +1,34 @@
----
-Title: 23 марта. Троллфейсбук дня
-Date: 2012-03-23
-Slug: 2012-03-23
----
+# 23 марта. Троллфейсбук дня
 
-## Тема дня
 Стоило написать "ошибка дня" или даже "троллфейс дня" наверное. Вчера фейсбук торопливо сообщили, что для обороны от патентных троллей Yahoo они [прикупили себе пакет из 750 патентов от IBM](http://j.mp/GUgHTW). Идея была простая - если Yahoo на нас нападает со своими патентами, мы пойдем в контратаку со своими. Каково же было удивление фейсбуковцев, когда сегодня выяснилось, что у [Yahoo есть лицензии на все патенты](http://j.mp/GUgHU2), проданные IBM :). Все же иногда представители соц. сетей ведут себя как стопроцентные дилетанты. Буду с интересом следить за развитием событий.
 
-### Технологии
+## Технологии
 
 * [Чуваки из CodePlex не выдержали и поддержали у себя Git](http://j.mp/GUgL6g). Такое ощущение что Гугл с Майкрософтом поменялись местами, да?
 * Джей Крепс, которого я раньше почему-то не читал, пишет [о надежности нынешних распределенных систем хранения и вычисления](http://j.mp/GUgL6h). Очень честно пишет, я с ним согласен, особенно с выводом.
 * [Декодер H.264 на javascript](http://j.mp/GHuHQq). Вроде бы мир сошел с ума, да? В дополнение к давно работающему [декодеру .mp3](http://j.mp/GHuEnW) составляет хороший мультимедийный комплект :)
 
-### Браузеры и мобильные
+## Браузеры и мобильные
 
 * [Интересный баг в вебките](http://j.mp/GHuHQt) - картинки больше 2мб оверсэмплятся для показа. Догадайтесь почему? ответ в статье есть.
 * [Нокия уволила 1000 человек](http://j.mp/GHuEEf) - налетай, торопись! Правда в основном в Финляндии.
 
-### Проекты
+## Проекты
 
 * [Интересная заметка о том, как некоторые сайты обходят "Block all results from this site" в выдаче гугла](http://j.mp/GUgLmM)
 * [Гуглеры довольны работой больше, чем фейсбукцы](http://j.mp/GUgLD6). Я почему-то не верю. Слишком много моих знакомых сбежали из гугла за последний год.
 * Еще одна, на этот раз более [подробная таблица сравнения опенсорсных лицензий.](http://j.mp/GUgIqV)
-* Сам прочитать еще не успел, но вам уже советую: [The Youtube Social Network](http://j.mp/GUgLDb) - фундаментальное исследование, популярности, контента и развитости социальной сети людей и роликов в YouTube. По первым абзацам очень интересно. 
+* Сам прочитать еще не успел, но вам уже советую: [The Youtube Social Network](http://j.mp/GUgLDb) - фундаментальное исследование, популярности, контента и развитости социальной сети людей и роликов в YouTube. По первым абзацам очень интересно.
 * [Гугл случайно засветил часть новых фич Google Music](http://j.mp/GUgIqY).
 
-### Стартапы
+## Стартапы
 
 * [Path закрыли раунд финансирования с оценкой в $250m pre-money](http://j.mp/GUgLDh). Оценка по рынку правильная, но я всё еще офигеваю с этого мира.
 * [Pinterest, которому прочат славу нового фейсбука](http://j.mp/GUgIr4) внезапно взял и [нанял Тима Кедэлла](http://j.mp/GUgIr7). Тим известен как человек, придумавший монетизацию фейсбука.
 * [Что каждый стартап должен знать о PR (и рекламе)](http://j.mp/GUgIr8) набор вполне разумных замечаний. По крайней мере первый пункт - "хороший PR не заменит вам хороший продукт" - это то, что я говорю каждому второму проекту.
 
 
-### Прочее
+## Прочее
 * [Летающий на крыльях человек - это фейк и наверняка чья-то реклама](http://j.mp/GUgLTz), говорят нам эксперты. Ну да, мы все тоже так подумали :)
 * [В макворлде отличный обзор ПУБЛИЧНОЙ БЕТЫ свежего фотошопа](http://j.mp/GUgIHm). Ссылка для скачивания беты там же.
 
