--- a/source/posts/2012-03-26.md
+++ b/source/posts/2012-03-26.md
@@ -1,16 +1,12 @@
----
-Title: 26 марта. хотите Skype в OpenSource?
-Date: 2012-03-26
----
+# 26 марта. хотите Skype в OpenSource?
 
-## Тема дня
 Тихо и незаметно обновился Skype OpenSource Project: попытка некоторых товарищей создать удобный враппер вокруг кусков бинарных библиотек, выкорчеваных из недр Skype. Вообще автор утверждает что хочет написать опенсорсную библиотеку поддержки протокола skype, но пока он все время в догоняющих. Более того, Microsoft и Skype за ним следят и удаляют все его файлики, согласно DMCA. Интересен этот проект в первую очередь потому, что никакого внятного описания протокола Skype не существует. Даже для того, чтобы написать бота, необходимо держать запущенным сам Skype (например я это делают через xvfb)
 
  * [Собственно новостная заметка](http://j.mp/GQZG0e). Качайте пока дают. Думаю скорее всего его закроют. Если что - спрашивайте, у меня есть архив.
  * [Интереснейшее обсуждение этого дела](http://j.mp/GQZG0f) на HackerNews, местами дилетантское, но все равно интересное
 
 
-### Технологии
+## Технологии
 * [Оракл будет раздавать обновления своего линукса бесплатно](http://j.mp/GQZG0i) via [@bormotov](http://j.mp/GQZHRR)
 * [Обновился Legit](http://j.mp/GPHMXo), очень удобный набор скриптов-алиасов для Git. Особенно я люблю `git sync`.
 * [Реализация подобия исключений для C](http://j.mp/GPHLms) с помощью longjump'ов, конечно. Тоже тема не новая, но всегда интересная.
@@ -19,7 +15,7 @@ Date: 2012-03-26
 * [На Стэковерфлоу отличное обсуждение о gzip и deflate](http://j.mp/GQZHRX).
 * [Хаскель не медленнее чем C](http://j.mp/GQZHS2) довольно старая статья, которую я привел чтобы подчеркнуть вот это: [Что должен уметь язык, чтобы стать быстрее C](http://j.mp/GQZHS5).
 
-### Браузеры и мобильное
+## Браузеры и мобильное
 * [Инстаграм открыл инвайты на приложение для Android](http://j.mp/GQZGgO). Скоро хипстеры с андроидами возликуют, что могут сделать 20-30 фотографий в свой уютный инстаграмчик. А больше не смогут - батарейка не выдержит.
 * [Сколько места в кеше Хрома?](http://j.mp/GQZGgP) - говорят примерно 2 гига. Много? Мало? Я бы сказал что кеш должен определяться пользователем. И 2 гига кажется мне разумным размером для значения по умолчанию.
 * В ту же кассу - [О кеше хромиума](http://j.mp/GQZI8u) - подробный разбор производительности и использования кеша в Хроме/Хромиуме.
@@ -27,15 +23,14 @@ Date: 2012-03-26
 * [В FF14 появился встроенный просмотрщик PDF](http://j.mp/GQZI8A). Именно тот, который я вам показывал в первых выпусках, PDF.js. Да, он работает на javascript, но быстрый и удобный. Я с ним уже месяц, рекомендую.
 
 
-### Проектное
+## Проектное
 * [Гики на гуглпродактфоруме обсуждают (а точнее осуждают) новый дизайн gmail](http://j.mp/GQZIoX). Мне и старый не нравился.
 * [Майкрософт запрещает пользователям пересылать ссылки на пайретбей](http://j.mp/GQZIoY) через MSN. Такой метод цензурирования вызывает у меня почесывание левой ноги :(
 * [Будущее виртуальных ассистентов](http://j.mp/GQZGh0), таких как Siri.
 
 
 
-### Прочее
-
+## Прочее
 * [Как кошки падают с большой высоты и выживают](http://j.mp/GQZIp1) - годный научпоп от BBC (не путать с bcc).
 * [Джеймс Кемерон начал спуск в Марианскую впадину](http://j.mp/GQZIp4). Одиночный спуск на 11 километров. Жутко. Хочется сказать "киношек насмотрелся".
 
