--- a/source/posts/2012-03-30.md
+++ b/source/posts/2012-03-30.md
@@ -1,14 +1,9 @@
----
-Title: 30 марта. Суровая пятница.
-Date: 2012-03-30
-Slug: 2012-03-39
----
+# 30 марта. Суровая пятница.
 
-## Тема дня
 На днях произошло важное для всего (моего) мира событие. Поисковик [duckduckgo](http://duckduckgo.com) перевалил за 10 миллионов запросов в день и полтора миллиона запросов от пользователей. Тоже мне, горячая новость, скажете вы. Но [посмотрите на график](http://duckduckgo.com/traffic.html) - давненько я не видел таких взлетов без рекламной компании. Если к графику приглядеться. то становится видно что такой взлет произошел сразу после редизайна. Видимо новый дизайн настолько понравился гикам, основным потребителям этого сервиса, что тысячи людей хлынули туда :) Ну или это бобук-эффект, потому что сразу после редизайна я начал рассказывать людям вокруг об этом замечательном сервисе.
 История без морали, просто присмотритесь к  [duckduckgo](http://duckduckgo.com), вдруг вы найдете там какие-то интересные решения для себя.
 
-### Проектное и интернеты
+## Проектное и интернеты
 
 * Скандальчик. [Гардиан опубликовали статью, доказывающую что Андроид с 2008 года принес только $550m дохода](http://www.guardian.co.uk/technology/2012/mar/29/google-earns-more-iphone-android?cat=technology&type=article). Учитывая миллиардны расходы на продукт это конечно провал. С другой стороны есть уже тысячи опровержений, правда все они менее убедительны пока.
 И еще про гугель:
@@ -19,19 +14,19 @@ Slug: 2012-03-39
 * [Собранные в одном chill-месте рекламные ролики удачных стартапов](http://chill.com/Brian/collection/startup-commercials) - очень рекомендед для понимания как люди делают рекламу.
 * [Интересная короткая заметка: "Самое трудное в опенсорсе это документация"](http://www.coon-and-friends.com/2012/03/29/hardest-part-of-open-source.html)
 
-### Браузеры и мобильное
+## Браузеры и мобильное
 * [CrowdCall - этакий Hangout но в мобильном и для двух платформ.](http://crowdcall.me/). Ну и лимиты помягче - бесплатно 20 участников разговора одновременно.
 * [Face.com научился распознавать возраст по фотографии](http://venturebeat.com/2012/03/29/fake-id-holders-beware-facial-recognition-service-face-com-can-now-detect-your-age/)
 * [Эппл запатентовали 3d камеру для iOS](http://www.patentlyapple.com/patently-apple/2012/03/apple-invents-a-killer-3d-imaging-camera-for-ios-devices.html)
 * [В борьбу за Nano-SIM вступил еще и RIM](http://www.pcworld.com/article/252845/rim_attacks_apples_nanosim_tactics.html).
 
-### Игры и видео
+## Игры и видео
 * [Очень глубокая статья о том, как HBO и Showtime выпускают сериалы](http://www.slate.com/articles/arts/culturebox/2012/03/game_of_thrones_how_hbo_and_showtime_make_money_despite_low_ratings_.single.html). Точнее о том, что сериалы очень дорогие в производстве и почему это производство окупается.
 * [Автор Prince of Persia нашел исходные коды игры, которые считались утерянными 23 года](http://www.geek.com/articles/games/prince-of-persia-creator-finds-lost-source-code-23-years-later-20120329/). Кстати, также он нашел исходные коды игры Karateka, которую я тоже хорошо помню.
 * [Немного истории, как появился СуперМарио](http://www.gamasutra.com/view/feature/167392/sad_but_true_we_cant_prove_when_.php)
 * [Глубокая, проработанная стратегия игры в виселицу](http://www.datagenetics.com/blog/april12012/index.html).
 
-### Совсем прочее
+## Совсем прочее
 * [Новая таблетка DRACO, которая кажется лечит от всех вирусов](http://www.process.org/discept/2011/11/17/draco-death-to-the-virus/). Оказывается тема старая, конца прошлого года. Но хочется же надеяться, да?
 
 *Сегодня в основном развлечения. Ну потому что ПЯТНИЦАА!*
