--- a/source/posts/2012-04-02.md
+++ b/source/posts/2012-04-02.md
@@ -1,10 +1,5 @@
----
-Title: 2 апреля. Ни одной серьезной новости.
-Date: 2012-04-02
-Slug: 2012-04-02
----
+# 2 апреля. Ни одной серьезной новости.
 
-## Тема дня
 Это было чудовищно. Когда я сегодня читал новости я не нашел практически ничего, что не носило бы налет вчерашнего дня дурака. Поэтому для начала давайте обсудим, кто и как вчера хорошо пошутил. Я пишу только об англоязычных компаниях, думаю все русские шутки вы нашли еще вчера.
 
 Больше и активнее всех шутила корпорация добра:
@@ -36,7 +31,7 @@ Slug: 2012-04-02
 Ну и мой, личный победитель, компания которая пошутила тонко, умно и даже в шутке умудрилась смаркетировать себя:
 [Ребята из Opera просят помощи - им некуда девать огромные обрезки данных, которые остаются после того, как их браузер сжимает их при передаче](http://my.opera.com/chooseopera/blog/2012/04/01/please-help-us-with-our-data-problem). Т.е. вот прямо так - все знают, что благодаря Опера Турбо данных передается меньше. Остатки оседают на нашей жилплощади в Осло. Спасите! :) Молодцы.
 
-### Остальное вразнобой сегодня
+## Остальное вразнобой сегодня
 
 * [codestre.am - отличный проект для гиков, покажи всем как работаешь в консоли](http://codestre.am)
 * [Мультиплейерный астероидз на вебсокетах](http://seb.ly/demos/MMOsteroids.html) - осторожно, сразу попадаешь в гущу боя!
