--- a/source/posts/2012-04-04.md
+++ b/source/posts/2012-04-04.md
@@ -1,9 +1,5 @@
----
-Title: Instagram для нормальных
-Date: 2012-04-04
-Slug: 2012-04-04
----
-## Тема дня
+# Instagram для нормальных
+
 ![instagram](http://addmeto.cc/images/posts/instagram.jpg)
 
 То, о чем я уже писал, произошло. [Клиент  для телефонов с Андроид вышел](http://blog.instagram.com/post/20418620347/getting-started-on-instagram-for-android). Это действительно знаковое событие, почему-то мало кто понимает каких размеров достиг [Instagr.am](http://instagr.am/). Вот вам немножко статистики:
@@ -17,19 +13,19 @@ Slug: 2012-04-04
 
 Самое важное: всё это без веб-версии. Т.е. вы не можете простым способом посмотреть фоточки из Instagram в вебе. Только через клиент. Какой я делаю для себя вывод? Мы вернулись в новую эру, мобильных соцсетей. Настоящих мобильных, без "мобильной версии сайта" и прочей требухи. И если бы не политика Apple в Instagram уже давным давно был бы сплошной, ну, давайте скажем, дейтинг :)
 
-### Интернет и проекты
+## Интернет и проекты
 * [Действительно крутой список из 50 улучшений в гугловском поиске за Март](http://insidesearch.blogspot.com/2012/04/search-quality-highlights-50-changes.html). Правда круто, но очень уж как-то мелко, не находите? Любой интернет проект может написать 100 таких пунктов за месяц. Действительно значимых вещей там две, но обе очень ценные на мой взгляд.
 * [Давным давно была такая поисковая система…](http://blog.jitbit.com/2012/04/once-there-was-search-engine.html). Про Яху, но мне в каждой строчке видится нынешний Google, в том числе и из-за предыдущей записи.
 * [10 патентов, с помощью которых Facebook отбивается от Yahoo](http://www.zdnet.com/blog/facebook/here-are-the-10-patents-facebook-is-suing-yahoo-with/11383). На nytimes [чуть подробнее и с pdf'ами](http://dealbook.nytimes.com/2012/04/03/facebook-accuses-yahoo-of-infringing-on-patents/).
 * [Google купил платежную систему TxVia чтобы улучшить свой Google Wallet](http://googlecommerce.blogspot.in/2012/04/google-acquires-txvia.html). Также есть [небольшой разбор полета на тему этой покупки](http://www.ubergizmo.com/2012/04/google-acquires-txvia-in-an-effort-to-expand-google-wallet/)
 * [3 слуха про Twitter и что это значит для других игроков на рынке](http://mashable.com/2012/04/03/twitter-changes-for-brands/). Довольно расслабленная статья, как и многие на мэшбл, но прочитать было интересно.
 
-### Мобильные и браузеры
+## Мобильные и браузеры
 * [Стивен Фрай. История смартфонов](http://www.stephenfry.com/2012/04/03/four-and-half-years-on/). Однобокий, но очень интересный взгляд на индустрию смартфонов. Согласитесь вы или нет - не важно, это же Стивен Фрай, его приятно и просто почитать!
 * [Новая версия Shazam](http://www.theverge.com/2012/4/3/2922307/shazam-5-tagging-iphone-ipod) умеет угадать мелодию, которая играет рядом, за одну секунду. Интересно что при тесте она угадала, что у меня сейчас по телевизору показывает "Two and Half Men", т.е. они научились и сериалы распознавать.
 * [UC browser выиграл About.com Readers' Choice Award](http://pixelstech.net/article/index.php?id=1333454883). Вообще [UC Browser](http://ru.ucweb.com/) довольно оригинальный браузер для андроида, посмотрите как время будет.
 
-### Технологии
+## Технологии
 * [Как сортировать что-то по пользовательским оценкам](http://evanmiller.org/how-not-to-sort-by-average-rating.html). Очень старый, но всё еще релевантный текст от Эвана Миллера, о том как правильно объекты (товары, музыку, да что угодно), по пользовательским оценкам. Уточню, вариант "по среднему рейтингу" плохой.
 * [Очень красивая визуализация данных и графиков на HTML5 - Envision.js](http://www.humblesoftware.com/envision), местами функциональнее Flash-аналогов.
 * [Уже не очень новая, но всё же альтернатива для Celery - RQ](http://nvie.com/posts/introducing-rq/), очень простая message queue на основе Redis. Больше всего похоже на [resque](https://github.com/defunkt/resque), но еще проще и на питоне.
@@ -39,7 +35,7 @@ Slug: 2012-04-04
 * [Увидел первый нормальный профайлер для Node.js - nodetime](http://nodetime.com/). Поигрался, работает.
 * Вчерашний [codestre.am](http://codestre.am/) почти упал. Но, к счастью, есть [опенсорсный аналог - ascii.io](http://ascii.io/). Работает даже лучше. Шлите свои записи :)
 
-### Прочее и Разное
+## Прочее и Разное
 * [Почему мы пьем кофе, а не принимаем кофеин в виде таблеток](http://blog.joellehman.com/index.php/2012/04/licking-tree-why-do-we-drink-coffee-instead-of-taking-caffeine-pills/).
 * [Как использовать свет чтобы управлять мозгом](http://www.livescience.com/19413-mind-control-light.html)
 
