--- a/source/posts/2012-04-06.md
+++ b/source/posts/2012-04-06.md
@@ -1,14 +1,10 @@
----
-Title: Пятничный микс
-Date: 2012-04-06
-Slug: 2012-04-06
----
+# Пятничный микс
 
-### Пятничное чтиво
+## Пятничное чтиво
 
 ![пятничный микс](/images/posts/frimix1.jpg)
 
-Сегодня всё не смешно и не отсортировано. Ну болею я, торможу и ничего не соображаю. Но ссылок я вам всё же добыл.  
+Сегодня всё не смешно и не отсортировано. Ну болею я, торможу и ничего не соображаю. Но ссылок я вам всё же добыл.
 Кстати, у меня к вам просьба. Помогите друг другу и мне, накидайте в каменты ссылок на интересное утреннее чтиво? Я буду благодарен, честно. А сейчас - свежая доза информации тут, вмазывайтесь:
 
 * [Гугл запустил приложение для улучшения точности позиционирования внутри помещений](http://techcrunch.com/2012/04/05/google-launches-android-app-to-improve-its-indoor-location-accuracy/)
