--- a/source/posts/2012-04-09-wallmart.md
+++ b/source/posts/2012-04-09-wallmart.md
@@ -1,8 +1,4 @@
----
-Title: Ошибка ценой в $1.85 миллиарда
-Date: 2012-04-09
-Slug: 2012-04-09-wallmart
----
+# Ошибка ценой в $1.85 миллиарда
 
 ## Завязка
 * Ошибка в использовании опроса пользователей стоила Волмарту 1.85 миллиарда долларов. И это очень консервативная оценка, не учитывающая затраты на перепланировку магазинов
