--- a/source/posts/2012-04-10.md
+++ b/source/posts/2012-04-10.md
@@ -1,10 +1,4 @@
----
-Title: День Двух с Хвостиком Миллиардов
-Date: 2012-04-10
-Slug: 2012-04-10
----
-
-# Тема дня
+# День Двух с Хвостиком Миллиардов
 
 ![два миллиарда](/images/posts/2bdollars.jpg)
 Вчерашним вечером, тихо и незаметно прошло объявление о том, что Microsoft купила Netscape. Точнее то, что осталось от нетскейпа - патенты, и надо сказать патенты небезынтересные. Ну например патенты на SSL или CGI кажутся мне довольно перспективными.  800 патентов был куплен по цене 1.056 миллиардов долларов наличными. Это **миллиард номер раз**.
