--- a/source/posts/2012-04-11.md
+++ b/source/posts/2012-04-11.md
@@ -1,10 +1,7 @@
----
-Title: Никаких происшествий. Приятно!
-Date: 2012-04-11
-Slug: 2012-04-11
----
-# Тема дня
+# Никаких происшествий. Приятно!
+
 А т.к. затишье - нету темы дня! Хорошо...
+
 ![V for V](/images/posts/v-for-vendetta.jpg)
 
 ## Проектное и интернеты
