--- a/source/posts/2012-04-12.md
+++ b/source/posts/2012-04-12.md
@@ -1,10 +1,5 @@
----
-Title: Делай нормально - будет нормально!
-Date: 2012-04-12
-Slug: 2012-04-12
----
+# Делай нормально - будет нормально!
 
-# Тема дня
 ![брум](http://addmeto.cc/images/posts/google-plus-why.jpg)
 Безусловной темой дня является вчерашний редизайн Google+, который теперь можно любовно называть "гугль крест". Собственно вчера вечером [в блоге гугла Вик Гундотра объявил о переходе "вперед, к простому, более красивому Гуглу"](http://googleblog.blogspot.com/2012/04/toward-simpler-more-beautiful-google.html). И, кажется, судя по каментам вокруг, это было худшее обновление Г+ за всю его короткую историю. Я бы даже сказал, что это худший редизайн гугла, но сейчас меня заклюют гуглофаны. Между тем [Вик беззаботен и дает интервью](http://www.cnet.com/8301-30976_1-57412712-10348864/vic-gundotra-how-we-claim-170m-google-users-reporters-roundtable/), кстати, хорошее.
 
