--- a/source/posts/2012-04-13.md
+++ b/source/posts/2012-04-13.md
@@ -1,9 +1,5 @@
----
-Title: Амазон по имени "Небо в алмазах"
-Date: 2012-04-13
-Slug: 2012-04-13
----
-## Тема дня
+# Амазон по имени "Небо в алмазах"
+
 ![амазон](http://addmeto.cc/images/posts/amazon.jpg)
 [Амазон сегодня запустил CloudSearch](http://aws.typepad.com/aws/2012/04/amazon-cloudsearch-start-searching-in-one-hour.html). Про него уже многое сказали, давайте и я скажу, раз уж я составил про него своё мнение. Есть классическая проблема: организовать хороший поиск по своему сайту. Десять лет назад было модно ставить специальные движки для поиска: udmSearch, ASPSeek, Яндекс.Сервер и тп. Пять лет назад было модно сказать "пусть по моему сайту поиск сделает Яндекс/Гугл". Сейчас мода на клауды, Амазон, как флагман облаковождения, должен был выпустить облачный поиск.
 
@@ -35,7 +31,7 @@ Slug: 2012-04-13
 * [Как Самсунг побил Нокию](http://www.asymco.com/2012/04/12/how-samsung-beat-nokia/) - вся статья в графиках.
 
 ## Технологии
-* [Вышел Kotlin M1](http://blog.jetbrains.com/kotlin/2012/04/kotlin-m1-is-out/) для любителей экзотических языков. 
+* [Вышел Kotlin M1](http://blog.jetbrains.com/kotlin/2012/04/kotlin-m1-is-out/) для любителей экзотических языков.
 * [WeMux - как поднять tmux для парного программирования](http://thechangelog.com/post/20986196780/wemux-multi-user-terminal-multiplexing-for-party-pair-pr). Вообще не парного, а коллективного :) Хороший пост про конфигуратор для tmux'а.
 * [Rise4Fun - сборник проектов от Microsoft Research](http://www.rise4fun.com/), теперь на одной странице. Повтор эксперимента с nano, если вы понимаете о чем я.
 * [еще один питоновый микрофреймворк для написания небольших сайтиков и API - Klein](https://github.com/twisted/klein). Судя по названию, он наверное должен перетекать сам в себя.
