--- a/source/posts/2012-05-14.md
+++ b/source/posts/2012-05-14.md
@@ -5,7 +5,7 @@
 
 Ну, допустим, самое очевидное - иконка "дискета", означающая "сохранить файл". Ладно, все просто привыкли, новое поколение уже не знает, что такое дискета, но понимает кнопку save. Но ведь на этом всё не заканчивается. Почему *radio buttons* называются так, вы знаете? Потому что в радиоприемниках аналоговой эпохи единовременно можно было нажать только одну кнопку. Вот так:
 
->>![center](http://addmeto.cc/images/posts/floppy-shmoppy.jpg)<<
+![center](http://addmeto.cc/images/posts/floppy-shmoppy.jpg)
 
 Стоит копнуть дальше - становится еще страшнее. Иконка "положить в закладки", чаще всего показывается как язычек тряпичной закладки в книге. Кто этим пользовался, скажите? Ну, кто этим пользовался _после школы_? Вообще иконка "папка", т.е. "folder". Вы часто в жизни еще встречаете те самые фолдеры, которые изображены на типовой иконке? Ок, давайте дальше. Zoom == лупа. Я последний раз видел лупу лет 15 назад. А вы? Даже иконка "Звонить" в сотовых телефонах чаще всего изображается в виде телефонной трубки середины прошлого века.
 
