--- a/source/posts/2012-05-15.md
+++ b/source/posts/2012-05-15.md
@@ -2,7 +2,7 @@
 
 Внезапно, всего [3 года прошло с момента выхода первой альфы MineCraft](http://www.minecraftforum.net/news/497-minecraft-turns-3-years-old-today/). За это время 28 миллионов пользователей зарегистрировались и 6 миллионов купили лицензию, совсем не дешевую.
 
->>![center](http://www.minecraftguide.info/wp-content/uploads/2011/03/anm_minecraft_header.png)<<
+![center](http://www.minecraftguide.info/wp-content/uploads/2011/03/anm_minecraft_header.png)
 
 Создатель майнкрафта, Нотч, стал своего рода легендой. Человек, который в 2010ых годах создал игру один. Как в старые добрые времена. Более того, это человек, который породил новый класс игр - после выхода minecraft игры-песочницы заполонили интернет.
 
