--- a/source/posts/2012-05-16.md
+++ b/source/posts/2012-05-16.md
@@ -2,7 +2,7 @@
 
 Ребята из проекта [OpenSignalMap](http://opensignalmaps.com) забабахали отличную интерактивную карту фрагментации андроида. По которой каждому, кто *писал* для андроида понятно, насколько всё плохо.
 
->>![center](https://img.skitch.com/20120516-cfbfnerd2nchmdyuw98twe7yqd.jpg)<<
+![center](https://img.skitch.com/20120516-cfbfnerd2nchmdyuw98twe7yqd.jpg)
 
 Собственно, что это я, [вот ссылка, вы всё можете посмотреть сами](http://opensignalmaps.com/reports/fragmentation.php). Мои выводы:
 
