--- a/source/posts/2012-05-17.md
+++ b/source/posts/2012-05-17.md
@@ -5,7 +5,7 @@
 2. *Показывать сводку*: это хитрый анонс. В нем говорится, что кроме снипетов, будет еще и особый тип ответа - сводка. В саммари попадет самая часто употребимая информация, в удобном для человека виде. Отдельно говорится, что очень удобно - человек будет получать ответ прямо в выдаче гугла, переходить никуда не надо.
 3. *Идти глубже и дальше*: суть нововведения легко понятна всем, кто зависал в википедии :) справа от выдачи поиска будет еще специальная навигация, позволяющая двигаться по связанным запросам.
 
->>![center](https://img.skitch.com/20120517-n28c1xmw3fdi397g67dp8yfshy.png)<<
+![center](https://img.skitch.com/20120517-n28c1xmw3fdi397g67dp8yfshy.png)
 
 Это не революция, как пишут некоторые, это хороший эволюционный шаг. Шаг, на который другие поисковики пока не решались. Т.е. да, у яндекса и бинга есть связанные запросы, помогающие уточнить, что именно человек ищет. Т.е. по сути пункт номер 1. "находить нужное" есть уже у всех. Да, пункт номер 3 тоже делается легко, причем кем угодно, используя например базу FreeBase. Но пункт 2 пока мало кто понял. А ведь это по сути и есть взрыв.
 
