--- a/source/posts/2012-05-22.md
+++ b/source/posts/2012-05-22.md
@@ -1,7 +1,7 @@
 # У меня нет паранойи, за мной не следят
 Иногда мне очень странно, по какому принципу русские СМИ выбирают темы, которые они будут переводить на русский. Вот, например, очень важная и широко освещенная в штатах тема: Твиттер поддержал инициативу "Do Not Track" и теперь позволяет пользователям современных браузеров явно отказаться от слежки за собой.
 
->>![center](http://clck.ru/15eUw.jpg)
+![center](http://clck.ru/15eUw.jpg)
 
 Собственно, что это значит? Это значит, что пользователь, включивший опцию Do Not Track в своём браузере, явно указывает "не собирай информацию обо мне и не используй ее ни для чего". Твиттер интерпретирует это самым простым образом, и, встречая пользователя с такой опцией, больше не показывает ему контекстную рекламу. На текущий момент эту фичу поддерживают все браузеры, кроме гуглохрома, что кажется мне симптоматичным.
 
