--- a/source/posts/2012-05-23.md
+++ b/source/posts/2012-05-23.md
@@ -1,7 +1,7 @@
 # Король умер, да здравствует король!
 Вы наверняка уже читали про это, но я решил всё же посветить сегодняшнюю заметку дня ужасному факту: [Google Chrome стал браузером №1 по данным StatCounter](http://gs.statcounter.com/#browser-ww-weekly-200827-201221).
 
->>![center](http://img.skitch.com/20120522-m5dhwi7uujy1f1t89s7ihqj9gw.png)<<
+![center](http://img.skitch.com/20120522-m5dhwi7uujy1f1t89s7ihqj9gw.png)
 
 Кто сейчас вспомнит, сколько длилось господство IE? У меня сейчас такое ощущение, что не меньше 10 лет. Я помню, как я страдал от IE6. Помню, как надеялся и выл от разочарования с IE7. Помню, как ни на что не надеялся и уже не разочаровывался от IE8. Анонсы IE9, конечно, зародили во мне надежду, но нет, всё осталось как прежде. Теперь я осторожно рассматриваю картинки с выставки IE10, но, я думаю, боржоми пить уже поздно. Тем более, что грузинские минводы теперь контрабандный товар.
 
