--- a/source/posts/2012-05-24.md
+++ b/source/posts/2012-05-24.md
@@ -1,7 +1,7 @@
 # Яху - экс из
 Компания, которую большая часть гиков вообще не видит и не понимает, выпустила [неожиданный продукт Yahoo Axis](http://axis.yahoo.com/).
 
->>![center](http://j.mp/MITYib)<<
+![center](http://j.mp/MITYib)
 
 Продукт представляет из себя расширения ко всем настольным браузерам и отдельные приложения для айфона и айпада, и позволяет искать в интернете... Где же новизна, спросите вы? Новизна в отображении результатов. Но давайте по порядку:
 
@@ -21,7 +21,7 @@
 * [Yahoo Axis блистает на iPad и немножко на десктопе](http://mashable.com/2012/05/24/yahoo-axis-hands-on/) - обзор от Mashable.
 * [Теккранч: Yahoo представляет Axis, их новый (и впечатляющий) десктопный и мобильный поиск](http://techcrunch.com/2012/05/23/yahoo-axis-search-browser/).
 
-Хочется поздравить ребят из Yahoo с первым хорошим продуктом за последние 2 года. 
+Хочется поздравить ребят из Yahoo с первым хорошим продуктом за последние 2 года.
 
 
 -----
@@ -35,7 +35,7 @@
 * [В Windows8 будет встроенный Flash](http://arstechnica.com/information-technology/2012/05/windows-8-will-integrate-include-adobe-flash/). И мне кажется, это хорошо, не качать же его отдельно. {flash} {adobe} {microsoft}
 
 ## На грани
-* [Просто офигенный анализ Eurovision с точки зрения математики и статистики, читать всем!](http://mewo2.github.com/nerdery/2012/05/20/ive-got-eurosong-fever-ted/). Я прямо оторваться не мог :) {eurovision} {fun} 
+* [Просто офигенный анализ Eurovision с точки зрения математики и статистики, читать всем!](http://mewo2.github.com/nerdery/2012/05/20/ive-got-eurosong-fever-ted/). Я прямо оторваться не мог :) {eurovision} {fun}
 * [Хороший новый проект от ребят из Мозиллы: Хаказавр](http://www.hackasaurus.org/en-US/). Позволяет компилировать странички между собой. Самая интересная часть там - букмарклет, который удобно выбирает кусочки DOM дерева. {mozilla} {startup}
 * [Ян Девис делится своим впечатлением о 5 неделях использования Go](http://blog.iandavis.com/2012/05/23/5-weeks-of-go/). Вкратце - впечатления двойственные, но скорее положительные. {go} {code}
 * [Три основных принципа программирования, которые ты должен понимать](http://net.tutsplus.com/tutorials/tools-and-tips/3-key-software-principles-you-must-understand/) как разработчик. Ну, да, про KISS, DRY и YAGNI. {programming}
