--- a/source/posts/2012-05-25.md
+++ b/source/posts/2012-05-25.md
@@ -1,7 +1,7 @@
 # Второй пятничный "микс"
 По пятницам мне лень сортировать. Поэтому теперь в пятницу будет всё вперемешку, чтобы вы прочитали наконец-то все разделы. Почему? А вот вам девушка сейчас ответит!
 
->>![center](http://marinamicheli.files.wordpress.com/2011/01/geek-test.jpg)<<
+![center](http://marinamicheli.files.wordpress.com/2011/01/geek-test.jpg)
 
 -----
 
