--- a/source/posts/2012-05-28.md
+++ b/source/posts/2012-05-28.md
@@ -2,7 +2,7 @@
 
 Внезапно в прессе поползли слухи о том, что Фейсбук собирается прикупить себе Оперу. Причем слухи с такими подробностями, что это либо наглая ложь, либо стопроцентная правда :)
 
->>![center](https://img.skitch.com/20120527-f9mwfemaxi5p85372c6xey6fic.png)<<
+![center](https://img.skitch.com/20120527-f9mwfemaxi5p85372c6xey6fic.png)
 
 Собственно, что нам сейчас известно об Опере?
 
