--- a/source/posts/2012-05-29.md
+++ b/source/posts/2012-05-29.md
@@ -4,7 +4,7 @@
 
 В общем, этого всего больше нет. Ну, как нет, просто Live пропал со всех моих радаров пару лет назад. Ни рекламы, ни новых продуктов, старые ребрендятся во что-то новое, как Office 360. Что это значит? Очередную смену курса?
 
->>![center](https://img.skitch.com/20120528-tjqiay4xjubyarir2nutuuy6ci.png)<<
+![center](https://img.skitch.com/20120528-tjqiay4xjubyarir2nutuuy6ci.png)
 
 Из интересных статей по этой теме за последнее время - [пост в блог Джейсона Лефковитца](http://jasonlefkowitz.net/2012/05/windows-live-is-dead/). Он, кстати, припоминает, что та же история постигла бренд .NET, который тоже пихали в конец любого продукта.
 
