--- a/source/posts/2012-05-30.md
+++ b/source/posts/2012-05-30.md
@@ -2,7 +2,7 @@
 
 Как многие заметили, сервис для сокращения ссылок **bitly** давным-давно не обновлялся. Сегодня все узнали почему: готовили новый, революционный (с точки зрения сокращателя ссылок), продукт.
 
->>![center](http://chyo.ru/testbundle.png)<<
+![center](http://chyo.ru/testbundle.png)
 
 Новая версия bitly сохранила все свойства старой. Вы по-прежнему можете сокращать ссылки, а так же получать по ним статистику использования. А вот что добавилось:
 
