--- a/source/posts/2012-06-01.md
+++ b/source/posts/2012-06-01.md
@@ -10,7 +10,7 @@
 
 Всего гугл подали более 50 заявок на TLD по цене $185000 за заявку, т.е. пошопились на 9-12 миллионов. Сейчас заявки на TLD больше не принимаются, ICANN готовится к запуску и пережевывает те 350 миллионов, которые она получила.
 
->>![center](http://hellogiggles.com/wp-content/uploads/2012/04/02/dontkillyourself-614x450.jpg)<<
+![center](http://hellogiggles.com/wp-content/uploads/2012/04/02/dontkillyourself-614x450.jpg)
 
 * [Гугл подписался на более чем 50 доменов](http://adage.com/article/digital/google-applies-50-domains-including-lol-youtube/235079/)
 * [Гугл подал заявки на .google, .docs, .youtube, .lol и другие TLD](http://techcrunch.com/2012/05/31/google-applies-for-google-youtube-and-lol-top-level-domains/)
