--- a/source/posts/2012-06-04.md
+++ b/source/posts/2012-06-04.md
@@ -4,7 +4,7 @@
 
 В конце прошлой недели ребята из [Mozilla UX выложили свой отчёт по использованию разных элементов интерфейса их браузера](https://blog.mozilla.org/ux/2012/06/firefox-heatmap-study-2012-results-are-in/). Сегодня я вам расскажу, что там было самое интересное. А это примерно всё.
 
->>![center](http://chyo.ru/testpilot.png)<<
+![center](http://chyo.ru/testpilot.png)
 
 Как, собственно, всё это происходило: в течении одной недели все данные тех, кто участвует в программе [Test Pilot](https://testpilot.mozillalabs.com/), отправлялись на сервера мозиллы. Всего было обследовано более 200 тысяч человек, с лёгким перекосом в сторону гиков. Ну, не то чтобы с лёгким, скорее, с сильным, потому что тест пилот обычно включён у пользователей Mozilla Nightly, например, у меня. Цель была понять, какими элементами интерфейса и как именно чаще всего пользуются люди, а так же какие фичи не замечают.
 
