--- a/source/posts/2012-06-05.md
+++ b/source/posts/2012-06-05.md
@@ -2,7 +2,7 @@
 
 Сегодня наконец-то подтвердились слухи, Google действительно купил команду проекта Meebo.
 
->>![center](http://chyo.ru/Nightly1.png)<<
+![center](http://chyo.ru/Nightly1.png)
 
 Мибо начинали как прекрасный Meebo Messenger, веб-клиент для почти всех протоколов. Постепенно, за 5 лет, в веб-мессенджере появился новый проект, который назывался Meebo Bar. Он и стал двигателем прогресса, в смысле, бизнеса. Сейчас основной продукт как раз Meebo Bar, переименованный просто в Meebo. По сути, продукт позволяет пользователям сайта, на котором установлен Meebo, делиться ссылками в соцсетях, общаться друг с другом, а так же смотреть рекламу. Важно, что рекламировать можно было и другие страницы своего же сайта, что очень удобно было использовать для повышения pageviews на пользователя.
 
