--- a/source/posts/2012-06-06.md
+++ b/source/posts/2012-06-06.md
@@ -2,7 +2,7 @@
 
 Хотел написать об это вчера, но так и не дождался официального анонса ребят из MoCo. Поэтому пишу сейчас. Вчера случилось сразу три события, и все три связаны с Mozilla.
 
->>![center](http://chyo.ru/m_1779.png)<<
+![center](http://chyo.ru/m_1779.png)
 
 [Вышел релиз Firefox 13](http://www.mozilla.org/en-US/firefox/13.0/releasenotes/). Каковы же главные изменения:
 
