--- a/source/posts/2012-06-07.md
+++ b/source/posts/2012-06-07.md
@@ -2,7 +2,7 @@
 
 Вчера вечером стало известно, что некоторый хакер получил тот или иной доступ к базе пользователей LinkedIn. Для тех, кто не читает длинные тексты - да, меняйте пароль, срочно.
 
->>![center](http://chyo.ru/360705491556.png)<<
+![center](http://chyo.ru/360705491556.png)
 
 Началось всё с того, что на форуме insidepro.com некто Polimo написал, что подобрал 236578 паролей из базы линкдина и выложил базу, содержащую 6,5 миллионов хешей от паролей. Пароли были выложены без имени пользователя, есть подозрение, что у автора файла имена пользователей есть.
 
@@ -17,11 +17,11 @@
 > * Отсутствие соли позволяет использовать заранее подготовленные "радужные таблицы" для взлома,
 > * SHA-1 хорошо распараллеливается на GPU,
 > * Linkedin не использовала никаких механизмов усиления ключа, а просто хэширование пароля "в лоб", без соли.
-> 
+>
 > Если бы LinkedIn использовала механизм для усиления ключа (key stretching), например, PBKDF2, то взлом хэшей был бы существенно затруднён. Основная идея таких механимов: использование соли и многократный "проход" по функции, что затрудняет взлом: с солью посчитать хэши заранее не удастся, а, например, 1000 вычислений хэша (как рекомендуется в том же PBKDF2) потребует больше ресурсов, чем одно вычисление. В идеале к этому еще можно добавить выбор хэш-функции, которую трудно распараллелить на GPU, например, bcrypt.
-> 
+>
 > Чтение по теме:
-> 
+>
 > * [Wikipedia: Bcrypt](http://en.wikipedia.org/wiki/Bcrypt)
 > * [Wikipedia: PBKDF2](http://en.wikipedia.org/wiki/PBKDF2)
 
