--- a/source/posts/2012-06-08.md
+++ b/source/posts/2012-06-08.md
@@ -3,7 +3,7 @@
 Знаете, сегодня темой дня должна была стать сетевая безопасность.
 Но я тут подумал. Нет, не буду ничего писать. Просто читайте новости.
 
->>![center](http://chyo.ru/360801825735.png)<<
+![center](http://chyo.ru/360801825735.png)
 
 -----
 
