--- a/source/posts/2012-06-09.md
+++ b/source/posts/2012-06-09.md
@@ -1,12 +1,12 @@
 # Субботняя мешанина
 
-Как вы, возможно, заметили, я сделал маленький редизайн. Постарался учесть все ваши пожелания. Пожалуйста, расскажите, стало ли лучше читать это дело с мобильных? 
+Как вы, возможно, заметили, я сделал маленький редизайн. Постарался учесть все ваши пожелания. Пожалуйста, расскажите, стало ли лучше читать это дело с мобильных?
 
->>![center](http://chyo.ru/360911878434.png)<<
+![center](http://chyo.ru/360911878434.png)
 
 Сегодня последний день недели, поэтому, как обычно, ссылки вперемешку.
 
---- 
+---
 
 * [Как я увольняю людей.](http://boss.blogs.nytimes.com/2012/06/04/how-i-fire-people/) Спорно, но по сути своей - правильно. Меня вообще руководители читают? Вы что думаете по этому поводу? {hr} {management}
 * [Twitter Confirms Photos, Hashtags & More Added to Facebook Integration.](http://thenextweb.com/twitter/2012/06/08/twitter-yes-weve-added-photos-hashtags-usernames-and-more-to-our-facebook-integration/) Это я так проверяю, может вам и заголовки не переводить? :) {twitter} {facebook} {integration}
