--- a/source/posts/2012-03-15.md
+++ b/source/posts/2012-03-15.md
@@ -1,10 +1,6 @@
----
-Title: s1e15. диетический выпуск
-Date: 2012-03-15
-Slug: 2012-03-15
----
+# s1e15. диетический выпуск
 
-### Бразуеры и мобильное
+## Бразуеры и мобильное
 
 * [Планы mozilla на cледующий год](https://hacks.mozilla.org/2012/03/firefox-in-2011-firefox-plans-for-2012/), очень интересно почитать. Болею за них. Наконец-то они поняли что silent update это то, что должно быть у браузера.
 * [Много и детально о том, как работает DNS в Chrome](https://plus.google.com/103382935642834907366/posts/FKot8mghkok), и почему у него получается разрешать имена быстрее чем остальным.
@@ -13,17 +9,18 @@ Slug: 2012-03-15
 * [Авторитетный для меня обзор нового iPad](http://daringfireball.net/2012/03/ipad_3) от Джона Грубера.
 
 
-### Технологии
+## Технологии
 
 * Thomas Veerman [обьявил релиз Minix 3.2.0](https://groups.google.com/forum/#!msg/minix3/LZvqtjhMTas/7kDbH7PYoUYJ) - самое вкусное в изменениях, это поддержка FUSE и переход на формат ELF в качестве основого формата бинарников.
 * [Чо-драйвен девелопмент](http://jrom.net/wat-driven-development) - очень глубокая идея, для того чтобы приучать себя к правильному использованию всего - поставить противный звук в качестве индикации ошибки :)
 * [В облаке амазаона около 450 тыс серверов](http://www.datacenterknowledge.com/archives/2012/03/14/estimate-amazon-cloud-backed-by-450000-servers/)
 
-### Проектное
+## Проектное
+
 * Дэвид Сакс у себя в твиттере написал [что не возьмет на работу ни одного человека, уволившегося из Яхуу боле чем через два месяца](http://venturebeat.com/2012/03/14/yammer-ceo-says-he-wont-hire-anyone-from-yahoo-who-doesnt-quit-in-next-60-days/) от начала патентной войны. Глубоко, да? :) Якобы этим он остановит Яху. Смешной.
 * [Oink.com закрывается. Насовсем.](http://www.oink.com/)
 
-### Разности
+## Разности
 * [Умные дядьки из Рочестера пытаются слать сообщения с помощью нейтрино](http://www.rochester.edu/news/show.php?id=4022).
 * [Чувак сломал Атлантик-сити](http://www.theatlantic.com/magazine/archive/2012/04/the-man-who-broke-atlantic-city/8900/?single_page=true) и выиграл более 6 миллионов долларов в казино за одну ночь. Используя только банальную логику. Да, играл в блекджек. И да, по сути, играл в удвоение.
 
