--- a/source/posts/2012-03-21.md
+++ b/source/posts/2012-03-21.md
@@ -1,10 +1,5 @@
----
-Title: 21 марта. В Москве выпал 21 см снега. 
-Date: 2012-03-21
-Slug: 2012-03-21
----
+# 21 марта. В Москве выпал 21 см снега.
 
-## Тема дня
 Давайте пообсуждаем: как у людей получаются "взрывные" запуски? Один из моих любимых примеров - fab.com. Вот [их свежая презентация с цифрами](http://j.mp/GDPZSL) - 9 месяцев, 3 млн живых регистраций, 1 млн проданных товаров, сейчас продажи идут в темпе 4 тыс. продаж в день. Как? Ну как можно было набрать 3 млн регистраций за 9 месяцев? Или вот еще:
 
 * [After Ditching Auctions, Mobile Marketplace EggDrop Hits Half A Million Downloads](http://j.mp/GDQ1tZ) - запустили продукт в ноябре. 4 месяца, 500к _активных_ пользователей мобильного приложения. Как? Приложение представляет из себя просто доску обьявлений "купи-продай", а-ля крейглист.
@@ -13,13 +8,13 @@ Slug: 2012-03-21
 
 В общем я пока решительно не понимаю, как, при полном отсутствии рекламных бюджетов ребята так стартуют. Расскажите?
 
-### Технологии
+## Технологии
 * Интересная статья про исследование стойкости паролей: [A Large-Scale Study of Web Password Habits.pdf](http://j.mp/GDQ1u2) от ivlad
 * [Очень простой и красивый wysiwyg-редактор](http://j.mp/GCMzMj), хорошо работающий с Bootstrap. Для ваших маленьких петпроджектов.
 * [потратить 1.5 миллиарда долларов за 60 милисекунд](http://j.mp/GCMx7n) - о том, во сколько обходится прокладка кабелей и летенси между лондоном и токио.
 * [Чуваку удалось получить 500к rps на nginx](http://j.mp/GCMzMm). Честно скажу, не смотрел на тесты, но там точно у него ошибки нет?
 
-### Браузеры и мобильное
+## Браузеры и мобильное
 * [theverge: Без рекламы приложения для Андроида могут быть вдвое эффективнее по питанию](http://j.mp/GCMA2Q) - очень похоже на правду. Один из проектов, которыми я занимаюсь, про мобильную рекламу. Уже чувствую себя немножко ворующим ваши батарейки :)
 * [SourceMaps в Google Chrome кажется примирит меня с разработкой в браузере](http://j.mp/GDQ1u5). Идея простая, показывать при откладке тот код, из которого был скомпилирован javascript. Удобно для GWT и, например, для CoffeeScript. Обещают поддержку этого же стандарта и в мозилле.
 * [Офигенная 3d-демка на Mozilla Developers, сделана на библиотеке Sprite3D.js ](http://j.mp/GDQ1u6) - c коровами!
@@ -27,11 +22,11 @@ Slug: 2012-03-21
 * [Из мозиллы ушел Крис Близзард](http://j.mp/GDQ1Km) - один из главных технических евангелистов компании. Говорит, что ушел не в гугл, но куда-то в стартап.
 * [Обзор самых интересных приложений с SXSW](http://j.mp/GDQ1Kq) - что-то радикально новое я не обнаружил. А вы?
 
-### Проектное
+## Проектное
 * Помните как в прошлом году гугл купил команду PostRank? Так вот, наработки постранк были [повторены той же командой в рамках Гугл Аналитики](http://j.mp/GDQ1Kr). Мне кажется это очень крутая функциональность.
 * [Вечное как мир рассуждение на тему "что лучше, опенспейс или кабинеты"](http://j.mp/GDPZSX). Я, кстати, за опенспейс.
 * [Грокло пишет, что Оракл получит от Гугла 32.7 млн долларов](http://j.mp/GDQ1Kt), а не 6 миллиардов о которых писала пресса. Правда ничего не говорится о том, сколько гугл будет платить за каждое устройство с андроидом внутри.
 
-### Прочее
+## Прочее
 * [Человек научился летать!](http://j.mp/GDQ1Ku) - но не как обычно, а с помощью аппарата, размахивающего крыльями. Никаких пропеллеров, все по честному!
 * [Король Гиков, отец трех детей](http://j.mp/GDQ1Kv). Да, Линус Торвальдз в жизни очень похож на того человека, которого описали в этой статье. Он, кстати, выгодно отличается от типового боксера по переписке - живьем тоже говорит очень бойко.
