--- a/source/posts/2012-03-27.md
+++ b/source/posts/2012-03-27.md
@@ -1,10 +1,5 @@
----
-Title: 27 марта. Деньги считают по весне
-Date: 2012-03-27
-Slug: 2012-03-27
----
+# 27 марта. Деньги считают по весне
 
-## Тема дня
 Мало кто задумывается, но среди стартапов тоже встречаются проекты, у которых ничего не получается. За последние 3 дня вышло с десяток новостей о таких "успешных" проектах. Толи по весне принято считать деньги, толи что-то начинает меняться так, как я хотел. Вот смотрите:
 
 * [Color, получивший $40м+ денег, имеет аж 30 тыщ аудитории](http://j.mp/GWBV3V). Готов за одну десятую суммы сделать проект на 300 тысяч.
@@ -13,17 +8,17 @@ Slug: 2012-03-27
 
 В общем я надеюсь что сейчас всякий шлак начнет закрываться быстрее и чаще. Нам всем надо этому научиться.
 
-### Проектное
+## Проектное
 * [У меня случилась рекурсия](http://j.mp/GVeJyY). Твиттер рекламирует наличие у себя рекламы :)
 * [Тим Кук наконец-то скатался в Китай](http://j.mp/GVeJyZ), и кажется довольно успешно. [Некоторые даже замечают, что он сделал то, чего не удавалось Джобсу](http://j.mp/GVeLXu). Думаю у Стива были причины.
 * [В Японии в судебном порядке заставляют Google удалять записи из саджеста поиска](http://j.mp/GVeJz2). Видите ли, некто Хироюки Томита утверждает, что его подзащитный много раз набирал в поиске гугла нечто, за что его потом уволили :)
 
-### Браузеры и мобильное
+## Браузеры и мобильное
 * [Google Play самовольно установил многим приложение "МТС Мобильная Почта"](http://j.mp/GVeLXI). Конечно это был банальный баг. Но кому-то очень повезло, да? :)
 * В продолжение вчерашнего - [еще о кеше, в основном, о жизни в нем.](http://j.mp/GVeJPn). Кстати, автор утверждает, что у Chrome кеш зажат на 320 метрах. via [Грей (не Саша)](http://j.mp/GVeJPq)
 * [Графен в батарейках - минус 16% к весу](http://j.mp/GVeMe5) via [@bormotov](http://j.mp/GQZHRR)
 
-### Технологии
+## Технологии
 * [Как устроен YouTube](http://j.mp/GVeMe8) - много ссылок на интересные проекты.
 * [Чем bash отличается от нормального, позиксового dash и вообще Борн Шелла](http://j.mp/GVeK5Q)
 * Кое что о белочках [Militarizing Your Backyard with Python and AI](http://www.i-programmer.info/news/105-artificial-intelligence/3968-militari­zing-your-backyard-with-python-and-ai.html) , за ссылку спасибо [Витусу Вагнеру](http://vitus-wagner.dreamwidth.org/720623.html)
