--- a/source/posts/2012-04-03.md
+++ b/source/posts/2012-04-03.md
@@ -1,10 +1,5 @@
----
-Title: 3 апреля, День Опенсорса
-Date: 2012-04-03
-Slug: 2012-04-03
----
+# 3 апреля, День Опенсорса
 
-## Тема дня
 ![картинка дня](http://ydn.zenfs.com/blogs/1/mojito_logo.png)
 
 Не могу представить, есть ли сегодня хоть какие-то интернет-проекты, которые обходятся без опенсорс технологий. Весь интернет, так или иначе, был построен энтузиастами юникса и учеными, для которых обмен исходными текстами программ, как и информацией, был в порядке вещей. Видимо это оставило свой отпечаток. Очень приятно, что сейчас даже самые большие компании участвуют в движении за освобождение исходных текстов и демократию во всем коде.
@@ -15,21 +10,21 @@ Slug: 2012-04-03
 * [Большая статья про историю и развитие OpenStack](http://www.wired.com/wiredenterprise/2012/04/openstack/), средства для организации кластеров (или по-модному "клаудов"), как публичных так и частных. Конечно слово Open в названии подразумевает открытость.
 * [Чему я научился, запуская в опенсорс Twitter Bootstrap](http://www.markdotto.com/2012/04/02/learnings-from-open-sourcing-bootstrap/), от Марка Отто, матершинника и автора Bootstrap, одного из самых успешных опенсорс проектов прошедшего года.
 
-### Проектное и интернет
+## Проектное и интернет
 
 * [Австралийцы, изобретатели WiFi, выиграли большую патентную битву в США](http://www.google.com/hostednews/afp/article/ALeqM5ipea3RFFms471RxFWK87M9G2nqWQ). Ну ладно, не изобретатели, ученые-разработчики :)
 * [Стартап сэкономил более $100k просто выбросив поддержку IE из своего проекта](http://techcrunch.com/2012/04/01/bootstrapped-startup-saves-over-100k-by-dropping-ie/). В общем давно пора. Доля старых IE в интернете крайне мала!. Immolate improved, если вы понимаете мою шутку конечно.
 * [Тауэр Дефенс на гугловых картах. Я прошел Москву и Питер вчера, слишком легко](http://www.mapstd.com/)
 * [Как мы обманули сами себя, задерживая запуск проекта](http://viniciusvacanti.com/2012/04/02/how-we-fooled-ourselves-into-delaying-our-startups-launch/). Полезно, хотя и очевидно.
 
-### Браузер и мобильные
+## Браузер и мобильные
 * [Работающий прототип Firefox для Win8](http://www.brianbondy.com/blog/id/135/). Вы наверное знаете, что теперь нельзя будет просто написать новый браузер для Win8, нужны будут специальные права.
 * [Почему гугл не волнуется о доходах с андроидов](http://gigaom.com/mobile/why-google-isnt-worried-about-androids-revenue/)
 * [Экономика андроида](http://www.asymco.com/2012/04/02/android-economics/). Судя по графикам, гугл медленно наращивает доход с каждого адроидофона, с 7.5 до 10 долларов на устройство.
 * [От идеи до дохода, менее чем за 24 часа](http://giantrobotbattle.com/2012/04/02/idea-to-profit-in-less-than-24-hours/). Ребята сделали очень забавный бизнес: делают прототипы мобильных приложений на заказ, по цене $99 за приложение. Это очень круто, я считаю.
 * При том что [Мобильные приложения требуют куда больше работы, чем вы думаете](http://agilewarrior.wordpress.com/2012/04/02/mobile-apps-are-more-work-than-you-think/).
 
-### Технологии
+## Технологии
 * [Таблицы соответствия кода JavaScript и Dart](http://synonym.dartlang.org/). Все еще думаю что это мертворожденный проект.
 * [Использование библиотеки Joda-Time](http://www.java-only.com/LoadTutorial.javaonly?id=46) - интересно, конечно, только пишущим на Java.
 * [Новый скринкаст от PeepCode: Full Stack Node.js](https://peepcode.com/products/full-stack-nodejs-i).
